# syncspace

./: .env.example  .gitignore  ALPHA_STATUS.md  AUTH_README.md  BACKEND_AUDIT_STATUS.md  BACKEND_CHECKLIST.md  BACKEND_IMPLEMENTATION_ACTION.md  BACKEND_IMPLEMENTATION_GUIDE.md  BACKEND_PHASES_1_3_COMPLETED.md  BACKEND_PHASE_5_COMPLETE.md  BACKEND_READY_TO_START.md  BUILD_AND_TEST.sh  BUILD_IN_PROGRESS.md  COMPILATION_TESTING_GUIDE.md  COMPLETE_ROADMAP.md  CONTRIBUTING.md  CURRENT_BUILD_STATUS.md  DESIGN_PROGRESS.md  DESIGN_REDESIGN_TODO.md  DOCUMENTATION_INDEX.md  ERROR_DIAGNOSIS_GUIDE.md  FEATURES.md  FEATURE_SUMMARY.md  FRONTEND_BACKEND_ANALYSIS.md  FRONTEND_COMPLETION_REPORT.md  FRONTEND_INTEGRATION_GUIDE.md  FRONTEND_SPRINT_SUMMARY.md  KEYBOARD_SHORTCUTS.md  LICENSE  LOCALIZATION_AUDIT.md  Makefile  QUICKSTART_NEW.md  QUICK_FIXES.md  QUICK_START_LOCALIZATION.md  QUICK_STATUS.md  README.md  ROADMAP.md  SECURITY.md  SESSION_COMPLETE.md  SESSION_REPORT_FINAL.md  (+23 more)
.github/: SESSION_COMPLETE.md  copilot-instructions.md  dependabot.yml  renovate.json  renovate.yml
backend/: CLIPPY_TODOS.md  Cargo.toml  build.rs  check_errors.txt  consolidate_migrations.py  fix_imports.ps1  run-debug.ps1  users.json
backend/migrations/: 001_initial_schema.sql  002_add_comments_tags.sql  003_add_backups.sql  003_add_notifications_and_preferences.sql  005_add_notifications.sql  006_add_encryption.sql  006_add_webhooks.sql  008_add_locking.sql  008_add_permissions.sql  009_add_additional_features.sql  011_add_integration_features.sql  011_add_oauth.sql  012_add_user_preferences.sql  013_add_collaboration.sql  014_add_file_versioning.sql  016_add_backup_scheduling.sql  017_add_folder_colors.sql  018_add_activity_tracking.sql  019_add_last_activity_visit.sql  020_add_setup_wizard.sql  021_add_2fa_totp.sql  022_add_user_groups_roles.sql  023_add_user_bio.sql  024_background_jobs.sql  025_add_refresh_tokens.sql  026_add_auth_security.sql  027_enhance_file_versions.sql  028_add_grid_columns.sql  028_oauth_ldap.sql  028_theme_customization.sql  028_update_jobs_system.sql  029_add_active_theme_id.sql  029_add_comment_reactions.sql  029_preview_scan_ftp_email.sql  030_add_metric_alerts.sql  030_enhance_share_access_logging.sql  031_fix_user_sessions_revoked.sql  032_add_share_users.sql  033_add_api_tokens.sql  033_add_favorites.sql  (+21 more)
backend/src/: analytics.rs  api_handlers.rs  archive_management.rs  audit.rs  auth.rs  compression.rs  conversion_worker.rs  cron.rs  database.rs  database_monitor.rs  db_monitor.rs  email_integration.rs  encryption.rs  external_storage.rs  features.rs  file_preview.rs  ftp_sync.rs  jobs.rs  ldap_integration.rs  lib.rs  locking.rs  main.rs  main.rs.warp.backup  main_legacy.rs  main_legacy_backup.rs  main_new.rs  notifications.rs  oauth.rs  performance.rs  permissions.rs  prometheus_metrics.rs  rate_limit.rs  redis_cache.rs  s3_storage.rs  search.rs  search_indexing.rs  security.rs  smart_folders.rs  status.rs  system_settings.rs  (+5 more)
backend/src/api/: activity.rs  admin.rs  api_tokens.rs  archives.rs  audit_compliance.rs  auth.rs  auth_security.rs  backup.rs  batch.rs  bulk_operations.rs  cleanup.rs  cloud_storage.rs  collaboration.rs  comments.rs  compression.rs  config.rs  conversion.rs  cron.rs  dashboard.rs  database_health.rs  db_health.rs  directories.rs  duplicates.rs  email.rs  encryption.rs  errors.rs  favorites.rs  file_comparison.rs  file_templates.rs  file_versions.rs  files.rs  folder_colors.rs  ftp.rs  groups.rs  guest.rs  jobs.rs  ldap.rs  metadata.rs  metrics.rs  mod.rs  (+27 more)
backend/src/handlers/: activity.rs  advanced_search.rs  backup.rs  batch.rs  collaboration.rs  comments.rs  duplicates.rs  favorites.rs  files.rs  mod.rs  notification_handlers.rs  sharing.rs  storage.rs  trash.rs  user_handlers.rs  users.rs  versioning.rs
backend/src/jobs/: mod.rs  queue.rs  scheduler.rs  types.rs  worker.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: mod.rs
backend/src/services/: all_services_impl.rs  auth_security_service.rs  auth_service.rs  cleanup_service.rs  file_service_impl.rs  job_worker.rs  mod.rs  performance_service.rs  search_service_impl.rs  smart_folders_service.rs  sync_service.rs  tag_service.rs  user_service_impl.rs  version_storage_service.rs
backend/src/websocket/: mod.rs
backend/tests/: README.md  api_tests.rs  auth_tests.rs  database_tests.rs  job_system_integration.rs  jwt_refresh_token_tests.rs  stress_tests.rs  websocket_integration.rs
data/: installs.json  levelbuild-MickeyLeskowitz.conf  test-upload-2.txt
desktop-app/: tauri.conf.json
docker/: docker-compose.yml
docs/: AUDIT_REPORT.md  DATABASE.md  FEATURE_SUMMARY.md  FRONTEND_INTEGRATION_COMPLETE.md  MASTER_TODO_REDESIGN.md  PERFORMANCE_SEARCH.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_TEST.md  README_NEW.md  REDESIGN_VISION.md  REPO_ANALYSIS.md  ROADMAP_SEARCH.md  SEARCH_FEATURE.md  SEARCH_IMPLEMENTATION_COMPLETE.md  SESSION_COMPLETION_REPORT.md  TESTING_SEARCH.md  UI_HARMONIZATION.md  WEEK1_CHECKLIST.md
frontend/: BACKEND_API_AUDIT.md  BACKEND_FIRST_GUIDE.md  BACKEND_FIRST_IMPLEMENTATION.md  FRONTEND-REFACTORING-TODO.md  HARMONIZATION_COMPLETE.md  STORE_REFACTORING_GUIDE.md  STYLEGUIDE.md  TESTING_GUIDE.md  UI_IMPROVEMENTS.md  app-v2.js  app-v3.js  app.html  app.js  dialogs.js  file-card-template.txt  fix-dark-mode.py  i18n.js  index-new.html  index-spa.html  index-test.html  index.backup.html  index.html  jsconfig.json  main.js  package.json  preview.js  styles-v2.css  styles-v3.css  styles.css  svelte.config.js  tailwind.config.js  tailwind.config.js.backup  test.html  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.js
frontend_components/: App.svelte  COMPONENTS.md  DEMO.md  ERRORS_FIXED.md  FINAL_FIX_REPORT.md  FIXES.md  GETTING_STARTED.md  INDEX.md  INTEGRATION.md  MANIFEST.md  MODAL_M3_EXPRESSIVE.md  PROJECT_COMPLETE.md  README.md  RESET.sh  SUMMARY.md  SVELTE5_MIGRATION.md  TAILWIND_V4_FIX.md  TODO.md  TROUBLESHOOTING.md  index.html  index.ts  package.json  start-demo.sh  start-dev.sh  svelte.config.js  tailwind.config.js  tsconfig.json  (+1 more)
(+655 files in other folders)
