[package]
name = "syncbackend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
# Web framework - Axum with tower ecosystem
axum = { version = "0.8", features = ["multipart", "ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
async-trait = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.10"
notify = "8.2"
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"
walkdir = "2.5"

# Authentication & Security
jsonwebtoken = { version = "10.1", default-features = false, features = ["rust_crypto"] }
argon2 = "0.5"
rand = "0.9"
totp-lite = "2.0"
sha2 = "0.10"
hex = "0.4"
base32 = "0.5"
hmac = "0.12"  # For webhook signatures

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }

# Search
tantivy = "0.25"
lopdf = "0.38"  # PDF text extraction

# HTTP Client (for webhooks)
reqwest = { version = "0.12", features = ["json"] }

# Advanced Features
zip = "6.0"
tar = "0.4"
flate2 = "1.1"
image = "0.25"
tempfile = "3.23"
