[package]
name = "syncbackend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
# Web framework - Axum with tower ecosystem
axum = { version = "0.8", features = ["multipart", "ws", "macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
async-trait = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.11"
notify = "8.2"
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"
walkdir = "2.5"

# Authentication & Security
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
argon2 = "0.5"
rand = "0.9"
totp-lite = "2.0"
totp-rs = { version = "5.6", features = ["qr", "otpauth"] }
qrcode = "0.14"
sha2 = "0.10"
hex = "0.4"
base32 = "0.5"
hmac = "0.12"  # For webhook signatures
aes-gcm = "0.10"  # AES-256-GCM encryption for file encryption at rest

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Search
tantivy = "0.25"
lopdf = "0.38"  # PDF text extraction
similar = "2.3"  # Text diffing library for version comparison
mime_guess = "2.0"  # MIME type detection from filenames

# HTTP Client (for webhooks)
reqwest = { version = "0.12", features = ["json"] }

# Advanced Features
zip = "6.0"
tar = "0.4"
flate2 = "1.1.7"
async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli", "zstd"] }
image = { version = "0.25", features = ["jpeg", "png", "webp", "gif", "bmp"] }
tempfile = "3.23"
sysinfo = "0.37"  # System information (CPU, memory, disk usage)
regex = "1.11"  # Input validation
rustc_version_runtime = "0.3"  # Runtime Rust version detection

# Cloud Storage & External Integrations (disabled for Windows build compatibility)
# aws-config = { version = "1.5", features = ["behavior-version-latest"] }
# aws-sdk-s3 = "1.68"
oauth2 = "5.0"
ldap3 = { version = "0.12", default-features = false, features = ["tls"] }
suppaftp = { version = "7.0", features = ["async-secure"] }
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
async-native-tls = "0.5"

# Document Text Extraction (modern, actively maintained)
pdf-extract = "0.10"  # Pure Rust PDF text extraction (Oct 2025)
docx-rust = "0.1.10"    # DOCX reading/writing with structure
calamine = "0.32"    # Excel/Calc spreadsheet reading (xlsx, xls, ods)
# extractous = "0.3" # Multi-format extraction (optional - requires native libs)

# Performance & Caching
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.22"
moka = { version = "0.12", features = ["future"] }  # In-memory cache
rayon = "1.10"  # Parallel processing
num_cpus = "1.16"  # CPU core count

# Metadata Extraction
kamadak-exif = "0.6"  # EXIF metadata from images
id3 = "1.14"  # ID3 tags from MP3 files
mp4parse = "0.17"  # MP4/M4A metadata
md5 = "0.8.0"
httpdate = "1.0.3"
